--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ ext {
     def tags = repo.tag.list().find {
         it.commit == head
     }
+    repo.close()
 
     revision = head.abbreviatedId
     revisionFull = head.id
